tests/ui/sized-hierarchy/pretty-print.future.stderr
error[E0119]: conflicting implementations of trait `ConstSizedTr` for type `X<_>`
  --> $DIR/pretty-print.rs:23:1
   |
LL | impl<T: const Sized> ConstSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> ConstSizedTr for T;

error[E0119]: conflicting implementations of trait `SizedTr` for type `X<_>`
  --> $DIR/pretty-print.rs:26:1
   |
LL | impl<T: Sized> SizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> SizedTr for T;

error[E0119]: conflicting implementations of trait `NegSizedTr` for type `X<_>`
  --> $DIR/pretty-print.rs:29:1
   |
LL | impl<T: ?Sized> pretty_print_dep::NegSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> NegSizedTr for T
             where T: const MetaSized;

error[E0119]: conflicting implementations of trait `ConstMetaSizedTr` for type `X<_>`
  --> $DIR/pretty-print.rs:32:1
   |
LL | impl<T: const MetaSized> ConstMetaSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> ConstMetaSizedTr for T
             where T: const MetaSized;

error[E0119]: conflicting implementations of trait `MetaSizedTr` for type `X<_>`
  --> $DIR/pretty-print.rs:35:1
   |
LL | impl<T: MetaSized> MetaSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> MetaSizedTr for T
             where T: MetaSized;

error[E0119]: conflicting implementations of trait `PointeeSizedTr` for type `X<_>`
  --> $DIR/pretty-print.rs:38:1
   |
LL | impl<T: PointeeSized> PointeeSizedTr for X<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `pretty_print_dep`:
           - impl<T> PointeeSizedTr for T
             where T: PointeeSized;

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0119`.
